--- a/task08/app/lambdas/api_handler/lambda_config.json
+++ b/task08/app/lambdas/api_handler/lambda_config.json
@@ -12,8 +12,9 @@
   "event_sources": [],
   "env_variables": {},
   "publish_version": true,
-  "alias": "${lambdas_alias_name}",
-  "url_config": {},
+  "alias": "learn",
+  "url_config": {"auth_type": "NONE"},
   "ephemeral_storage": 512,
-  "tags": {}
+  "tags": {},
+  "layers": ["axios-layer"]
 }
