--- a/task08/app/lambdas/api_handler/package.json
+++ b/task08/app/lambdas/api_handler/package.json
@@ -5,8 +5,5 @@
   "main": "index.js",
   "scripts": {},
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "axios": "^1.7.7"
-  }
+  "license": "ISC"
 }
